@@ -4,9 +4,55 @@ title: Command
 lang: en
 ---
 
-# util database query
+# util monitor client
 
-Query SQLite3 database
+Start device monitor client
+
+# Security
+
+`watermint toolbox` stores credentials into the file system. That is located at below path:
+
+| OS      | Path                                                               |
+|---------|--------------------------------------------------------------------|
+| Windows | `%HOMEPATH%\.toolbox\secrets` (e.g. C:\Users\bob\.toolbox\secrets) |
+| macOS   | `$HOME/.toolbox/secrets` (e.g. /Users/bob/.toolbox/secrets)        |
+| Linux   | `$HOME/.toolbox/secrets` (e.g. /home/bob/.toolbox/secrets)         |
+
+Please do not share those files to anyone including Dropbox support.
+You can delete those files after use if you want to remove it. If you want to make sure removal of credentials, revoke
+application access from setting or the admin console.
+
+Please see below help article for more detail:
+
+* Dropbox (Individual account): https://help.dropbox.com/installs-integrations/third-party/third-party-apps
+
+## Auth scopes
+
+| Description |
+|-------------|
+
+# Authorization
+
+For the first run, `tbx` will ask you an authentication with your Dropbox account. Please copy the link and paste it
+into your browser. Then proceed to authorization. After authorization, Dropbox will show you an authorization code.
+Please copy that code and paste it to the `tbx`.
+
+```
+
+watermint toolbox xx.x.xxx
+==========================
+
+© 2016-2022 Takayuki Okazaki
+Licensed under open source licenses. Use the `license` command for more detail.
+
+1. Visit the URL for the auth dialogue:
+
+https://www.dropbox.com/oauth2/authorize?client_id=xxxxxxxxxxxxxxx&response_type=code&state=xxxxxxxx
+
+2. Click 'Allow' (you might have to login first):
+3. Copy the authorisation code:
+Enter the authorisation code
+```
 
 # Installation
 
@@ -23,14 +69,16 @@ This document uses the Desktop folder for command example.
 ## Run
 
 Windows:
+
 ```
 cd $HOME\Desktop
-.\tbx.exe util database query -file /LOCAL/PATH/DATA.sql -sql SQL
+.\tbx.exe util monitor client 
 ```
 
 macOS, Linux:
+
 ```
-$HOME/Desktop/tbx util database query -file /LOCAL/PATH/DATA.sql -sql SQL
+$HOME/Desktop/tbx util monitor client 
 ```
 
 Note for macOS Catalina 10.15 or above: macOS verifies Developer identity. Currently, `tbx` is not ready for it. Please
@@ -44,12 +92,12 @@ Open" on the dialogue.
 
 ## Options:
 
-| Option           | Description       | Default |
-|------------------|-------------------|---------|
-| `-file`          | Path to data file |         |
-| `-result`        | Query result      |         |
-| `-result-format` | Output format     |         |
-| `-sql`           | Query             |         |
+| Option              | Description                        | Default |
+|---------------------|------------------------------------|---------|
+| `-monitor-interval` | Monitoring interval (seconds)      | 10      |
+| `-name`             | Client name                        |         |
+| `-peer`             | Account alias                      | default |
+| `-sync-interval`    | Sync to Dropbox interval (seconds) | 300     |
 
 ## Common options:
 
@@ -71,12 +119,6 @@ Open" on the dialogue.
 | `-secure`          | Do not store tokens into a file                                                           | false                |
 | `-verbose`         | Show current operations for more detail.                                                  | false                |
 | `-workspace`       | Workspace path                                                                            |                      |
-
-# Grid data output of the command
-
-## Grid data output: Result
-
-Query result
 
 # Proxy configuration
 
