@@ -4,9 +4,53 @@ title: コマンド
 lang: ja
 ---
 
-# util image exif
+# util monitor client
 
-Print EXIF metadata of image file
+Start device monitor client
+
+# セキュリティ
+
+`watermint toolbox`は認証情報をファイルシステム上に保存します. それは次のパスです:
+
+| OS      | パス                                                               |
+|---------|--------------------------------------------------------------------|
+| Windows | `%HOMEPATH%\.toolbox\secrets` (e.g. C:\Users\bob\.toolbox\secrets) |
+| macOS   | `$HOME/.toolbox/secrets` (e.g. /Users/bob/.toolbox/secrets)        |
+| Linux   | `$HOME/.toolbox/secrets` (e.g. /home/bob/.toolbox/secrets)         |
+
+これらの認証情報ファイルはDropboxサポートを含め誰にも共有しないでください.
+不必要になった場合にはこれらのファイルを削除しても問題ありません. 認証情報の削除を確実にしたい場合には、アプリケーションアクセス設定または管理コンソールからアプリケーションへの許可を取り消してください.
+
+方法は次のヘルプセンター記事をご参照ください:
+
+* Dropbox (個人アカウント): https://help.dropbox.com/installs-integrations/third-party/third-party-apps
+
+## 認可スコープ
+
+| 説明 |
+|------|
+
+# 認可
+
+最初の実行では、`tbx`はあなたのDropboxアカウントへの認可を要求します. リンクをブラウザにペーストしてください. その後、認可を行います.
+認可されると、Dropboxは認証コードを表示します. `tbx`にこの認証コードをペーストしてください.
+
+```
+
+watermint toolbox xx.x.xxx
+==========================
+
+© 2016-2022 Takayuki Okazaki
+オープンソースライセンスのもと配布されています. 詳細は`license`コマンドでご覧ください.
+
+1. 次のURLを開き認証ダイアログを開いてください:
+
+https://www.dropbox.com/oauth2/authorize?client_id=xxxxxxxxxxxxxxx&response_type=code&state=xxxxxxxx
+
+2. 'Allow'をクリックします (先にログインしておく必要があります):
+3. 認証コードをコピーします:
+認証コードを入力してください
+```
 
 # インストール
 
@@ -22,14 +66,16 @@ watermint toolboxは、システムで許可されていれば、システム内
 ## 実行
 
 Windows:
+
 ```
 cd $HOME\Desktop
-.\tbx.exe util image exif -file /LOCAL/PATH/TO/IMG.jpg
+.\tbx.exe util monitor client 
 ```
 
 macOS, Linux:
+
 ```
-$HOME/Desktop/tbx util image exif -file /LOCAL/PATH/TO/IMG.jpg
+$HOME/Desktop/tbx util monitor client 
 ```
 
 macOS Catalina 10.15以上の場合: macOSは開発者情報を検証します. 現在、`tbx`はそれに対応していません. 実行時の最初に表示されるダイアログではキャンセルします.
@@ -41,9 +87,12 @@ macOS Catalina 10.15以上の場合: macOSは開発者情報を検証します. 
 
 ## オプション:
 
-| オプション | 説明              | デフォルト |
-|------------|-------------------|------------|
-| `-file`    | Path to data file |            |
+| オプション          | 説明                               | デフォルト |
+|---------------------|------------------------------------|------------|
+| `-monitor-interval` | Monitoring interval (seconds)      | 10         |
+| `-name`             | Client name                        |            |
+| `-peer`             | Account alias                      | default    |
+| `-sync-interval`    | Sync to Dropbox interval (seconds) | 300        |
 
 ## 共通のオプション:
 
@@ -65,34 +114,6 @@ macOS Catalina 10.15以上の場合: macOSは開発者情報を検証します. 
 | `-secure`          | トークンをファイルに保存しません                                                                   | false          |
 | `-verbose`         | 現在の操作を詳細に表示します.                                                                      | false          |
 | `-workspace`       | ワークスペースへのパス                                                                             |                |
-
-# 実行結果
-
-作成されたレポートファイルのパスはコマンド実行時の最後に表示されます. もしコマンドライン出力を失ってしまった場合には次のパスを確認してください. [job-id]は実行の日時となります.
-このなかの最新のjob-idを各委任してください.
-
-| OS      | パスのパターン                              | 例                                                     |
-|---------|---------------------------------------------|--------------------------------------------------------|
-| Windows | `%HOMEPATH%\.toolbox\jobs\[job-id]\reports` | C:\Users\bob\.toolbox\jobs\20190909-115959.597\reports |
-| macOS   | `$HOME/.toolbox/jobs/[job-id]/reports`      | /Users/bob/.toolbox/jobs/20190909-115959.597/reports   |
-| Linux   | `$HOME/.toolbox/jobs/[job-id]/reports`      | /home/bob/.toolbox/jobs/20190909-115959.597/reports    |
-
-## レポート: metadata
-
-EXIFデータ
-このコマンドはレポートを3種類の書式で出力します. `metadata.csv`, `metadata.json`, ならびに `metadata.xlsx`.
-
-| 列                 | 説明                                                                |
-|--------------------|---------------------------------------------------------------------|
-| date_time_original | 元の画像データが生成された日時                                      |
-| date_time          | 画像を作成した日時. EXIF標準では、ファイルを変更した日時となります. |
-| make               | メーカー名                                                          |
-| model              | モデル名またはモデル番号                                            |
-
-`-budget-memory low`オプションを指定した場合、レポートはJSON形式のみで生成されます
-
-レポートが大きなものとなる場合、`.xlsx`フォーマットのファイルは次のようにいくつかに分割されて出力されます; `metadata_0000.xlsx`, `metadata_0001.xlsx`
-, `metadata_0002.xlsx`, ...
 
 # ネットワークプロクシの設定
 
