@@ -2948,6 +2948,12 @@
   "recipe.util.image.placeholder.flag.width": "Width (pixel)",
   "recipe.util.image.placeholder.title": "Create placeholder image",
   "recipe.util.image.title": "Image commands",
+  "recipe.util.monitor.client.flag.monitor_interval": "Monitoring interval (seconds)",
+  "recipe.util.monitor.client.flag.name": "Client name",
+  "recipe.util.monitor.client.flag.peer": "Account alias",
+  "recipe.util.monitor.client.flag.sync_interval": "Sync to Dropbox interval (seconds)",
+  "recipe.util.monitor.client.title": "Start device monitor client",
+  "recipe.util.monitor.title": "Device monitor commands",
   "recipe.util.net.download.cli.args": "-out /LOCAL/PATH/TO/STORE -url URL_TO_DOWNLOAD",
   "recipe.util.net.download.flag.out": "Local path to store",
   "recipe.util.net.download.flag.url": "URL to download",
