@@ -1,3 +1,4 @@
 * #614 : Linux Arm64 build
 * #616 : Google Calendar command
 * #619 : Utility commands
+* #620 : Device monitoring util command
